FIx broken Media layout issue

--- a/themes/evictionlab/assets/sass/_updates.scss
+++ b/themes/evictionlab/assets/sass/_updates.scss
@@ -536,7 +536,7 @@ svg {
 
 // Questions & Answers About Eviction Post
 
-.page-type-updates.questions-and-answers-about-evictions-as-the-cdc-moratorium-ends, .page-type-updates.preguntas-y-respuestas-sobre-desalojos-y-el-final-de-la-moratoria-de-los-cdc {
+.page-type-updates.page-questions-and-answers-about-evictions-as-the-cdc-moratorium-ends, .page-type-updates.page-preguntas-y-respuestas-sobre-desalojos-y-el-final-de-la-moratoria-de-los-cdc {
   .dropdown.language-select {
   display: block;
   }
@@ -550,7 +550,7 @@ svg {
 
 // Allow translation option on certain posts
 
-.page-type-updates.se-extendió-la-moratoria-federal-pero-continúan-las-presentaciones-de-desalojo, .page-type-updates.federal-moratorium-extended-but-eviction-filings-continue {
+.page-type-updates.page-se-extendió-la-moratoria-federal-pero-continúan-las-presentaciones-de-desalojo, .page-type-updates.page-federal-moratorium-extended-but-eviction-filings-continue {
   .dropdown.language-select {
     display: block;
     }
